
public interface ElectronicInstrument {
  void tune();

    
}