public class Guitar implements Instrument, ElectronicInstrument{
    public void play(){
        System.out.println("Guitar is playing tin tin tin");
    }
    
    public void setChord(){
        System.out.println("The guitar has been tuned.");
    }

    public void tune(){
        System.out.println("The guitar has been tuned.");
    }
}
