public interface Instrument{
    void play();
}