
public interface KeyboardInstrument {
 public  void press();
    
}