public class Piano  implements Instrument, KeyboardInstrument{
    public void play(){
        System.out.println("Piano is playing tan tan tan");
    }

    public void press(){
        System.out.println("The piano has been pressed.");
    }
    
}
