@startuml
title  Instrument

interface Instrument{
    +play()
}

interface ElectronicInstrument{
    +tune()
}

interface KeyboardInstrument{
    +press()
}

class Guitar{
    +play()
}

class Piano{
    +play()
}

class Orchestra{
    -instruments : Instrument[]
    +playAll()
}

Guitar -up-|> Instrument : <<implements>>
Guitar -up-|> ElectronicInstrument : <<implements>>

Piano -up-|> Instrument : <<implements>>
Piano -up-|> KeyboardInstrument : <<implements>>

hide empty members

@enduml